--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "live-server": "^1.2.1",
     "node-sass": "4.5.3",
     "normalize.css": "7.0.0",
+    "prismic-javascript": "^2.0.1",
+    "prismic-reactjs": "^0.3.2",
     "react": "16.0.0",
     "react-dom": "16.0.0",
     "react-modal": "2.2.2",
