--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,12 @@
 {
   "presets": [
-    "env", 
+    ["env", {
+      "targets": {
+        "browsers": "last 2 versions"
+      },
+      "loose":true,
+      "modules": false
+    }],
     "react"
   ],
   "plugins": [
