--- a/package.json
+++ b/package.json
@@ -25,8 +25,9 @@
     "normalize.css": "7.0.0",
     "prismic-javascript": "^2.0.1",
     "prismic-reactjs": "^0.3.2",
-    "react": "16.0.0",
-    "react-dom": "16.0.0",
+    "react": "^16.8.3",
+    "react-dom": "^16.8.3",
+    "react-draggable": "^3.1.1",
     "react-modal": "2.2.2",
     "react-player": "^1.9.3",
     "sass-loader": "6.0.6",
