--- a/package.json
+++ b/package.json
@@ -20,16 +20,15 @@
     "css-loader": "0.28.4",
     "dotenv": "^6.2.0",
     "dotenv-webpack": "^1.7.0",
-    "live-server": "^1.2.1",
     "node-sass": "4.5.3",
     "normalize.css": "7.0.0",
     "prismic-javascript": "^2.0.1",
     "prismic-reactjs": "^0.3.2",
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
-    "react-draggable": "^3.1.1",
-    "react-modal": "2.2.2",
     "react-player": "^1.9.3",
+    "react-transition-group": "^2.7.0",
+    "react-waypoint": "^9.0.1",
     "sass-loader": "6.0.6",
     "style-loader": "0.18.2",
     "validator": "8.0.0",
