--- a/.babelrc
+++ b/.babelrc
@@ -10,7 +10,8 @@
     "react"
   ],
   "plugins": [
-    "transform-class-properties"
+    "transform-class-properties",
+    "babel-plugin-syntax-dynamic-import"
   ]
 }
 
