--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "dotenv": "^6.2.0",
     "dotenv-webpack": "^1.7.0",
     "file-loader": "^3.0.1",
-    "node-sass": "4.5.3",
+    "node-sass": "^4.12.0",
     "normalize.css": "7.0.0",
     "prismic-javascript": "^2.0.1",
     "prismic-reactjs": "^0.3.2",
