--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@babel/preset-react": "^7.0.0",
     "@reach/router": "^1.2.1",
     "babel-loader": "^8.0.5",
-    "css-loader": "0.28.4",
+    "css-loader": "^2.1.1",
     "dotenv": "^6.2.0",
     "dotenv-webpack": "^1.7.0",
     "file-loader": "^3.0.1",
